# autoresearch-genealogy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.method.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
archives/: README.md  african-american.md  australia-nz.md  austria.md  canada.md  england-wales.md  france.md  germany.md  hungary.md  ireland.md  italy.md  jewish-genealogy.md  mexico-latin-america.md  netherlands.md  norway.md  poland.md  russia-ukraine.md  scotland.md  spain-portugal.md  sweden.md  usa-census.md  usa-colonial.md  usa-immigration.md  usa-military.md  usa-vital-records.md
checklists/: before-you-add-an-ancestor.md  first-week-checklist.md  interview-a-relative.md  scan-your-documents.md  share-safely.md  verify-an-ai-finding.md
examples/: README.md  colonial-deep-dive.md  cross-reference-audit.md  dna-to-genealogy-mapping.md  name-resolution.md  tree-expansion-session.md
guides/: privacy-mode.md
prompts/: 01-tree-expansion.md  02-cross-reference-audit.md  03-findagrave-sweep.md  04-gedcom-completeness.md  05-source-citation-audit.md  06-unresolved-persons.md  07-timeline-gap-analysis.md  08-open-question-resolution.md  09-bygdebok-extraction.md  10-colonial-records-search.md  11-immigration-search.md  12-dna-chromosome-analysis.md  13-image-archive-deep-dive.md  14-military-records-sweep.md  README.md
reference/: common-pitfalls.md  confidence-tiers.md  gedcom-guide.md  github-triage-lane.md  glossary.md  naming-conventions.md  research-techniques.md  source-hierarchy.md  vault-file-manifest.md
spec/: uat.md  (+11 more)
(+120 files in other folders)
